# nano-tori

./: .gitignore  CMakeLists.txt  LICENSE  LICENSEbak  Makefile  README.md  auxiliary.hh  botch_optimise-torus-full.cc  geometry2.cc  geometry2.hh  geometry3.cc  geometry3.hh  rational.hh  shape-gen.hh  torus-extra.cc  torus-full.cc  torus-grid.cc  torus-simple.cc
